fix ranking spacing

--- a/static/css/topic_page.scss
+++ b/static/css/topic_page.scss
@@ -155,6 +155,10 @@ section.subtopic {
   padding: 15px;
 }
 
+.chart-container.ranking-tile {
+  padding-top: 15.5px;
+}
+
 .chart-container footer {
   margin-left: inherit !important;
 }
